--- a/7.html
+++ b/7.html
@@ -5,8 +5,8 @@
 		<title>个性化拼图</title>
 		<style type="text/css">
 			table{border-collapse:collapse;}
-			td, #box_4_0{border:1px solid #888; width:160px; height:160px;}
-			td{width:160px; height:160px;}
+			td, #box_4_0{border:1px solid #888; width:240px; height:240px;}
+			td{width:240px; height:240px;}
 		</style>
 		<script type="text/javascript">
 			function init(){
@@ -16,10 +16,10 @@
 				for(var i=0; i < 4; i++){
 					html.push("<tr>");
 					for(var j=0; j < 4; j++){
-						var top="-"+160*j+"px";
+						var top="-"+240*j+"px";
 						//alert(top);
-						var left="-"+160*i+"px";
-						html.push('<td id="box_' + i + "_" + j + '" style="background: url(zww.jpg) '+top+' '+left+';"></td>');
+						var left="-"+240*i+"px";
+						html.push('<td id="box_' + i + "_" + j + '" style="background: url(zww1.jpg) '+top+' '+left+';"></td>');
 					}
 					html.push("</tr>");
 				}
@@ -105,7 +105,7 @@
 							var x = document.getElementById("box_"+i+"_"+j).style.backgroundPositionX;
 							var y = document.getElementById("box_"+i+"_"+j).style.backgroundPositionY;
 							console.log(x);
-							if(x==(j*(-160)+"px") && y==(i*(-160)+"px")){
+							if(x==(j*(-240)+"px") && y==(i*(-240)+"px")){
 								continue;
 							}else{
 								return;
