--- a/7.html
+++ b/7.html
@@ -9,8 +9,10 @@
 			td{width:240px; height:240px;}
 		</style>
 		<script type="text/javascript">
+			//页面元素，图片加载
 			function init(){
 				//alert("1");
+				var picture="zww"+(makeRandom(2)+1)+".jpg";				
 				var html=[];
 				html.push("<table>");
 				for(var i=0; i < 4; i++){
@@ -19,7 +21,7 @@
 						var top="-"+240*j+"px";
 						//alert(top);
 						var left="-"+240*i+"px";
-						html.push('<td id="box_' + i + "_" + j + '" style="background: url(zww1.jpg) '+top+' '+left+';"></td>');
+						html.push('<td id="box_' + i + "_" + j + '" style="background: url('+picture+') '+top+' '+left+';"></td>');
 					}
 					html.push("</tr>");
 				}
@@ -30,7 +32,7 @@
 				document.getElementById("box_4_0").style.background=document.getElementById("box_3_0").style.background;
 				document.getElementById("box_3_0").style.background="";
 			}
-			
+			//键盘事件操作
 			function move(){
 				switch(event.keyCode){
 					case 37:
@@ -50,6 +52,7 @@
 				}
 				success();
 			}
+			//左移
 			function left(){
 				for(var i=0; i < 4; i++){
 					for(var j=0; j < 3; j++){
@@ -62,6 +65,7 @@
 					}
 				}
 			}
+			//上移
 			function up(){
 				for(var i=0; i < 4; i++){
 					for(var j=0; (j < 4 && i < 4) || (i==3 && j==0); j++){
@@ -74,6 +78,7 @@
 					}
 				}
 			}
+			//右移
 			function right(){
 				for(var i=0; i < 4; i++){
 					for(var j=1; j < 4; j++){
@@ -86,6 +91,7 @@
 					}
 				}
 			}
+			//下移
 			function down(){			
 				for(var i=0; i < 5; i++){
 					for(var j=0; (j < 4 && i < 4) || (i==4 && j==0); j++){
@@ -98,6 +104,7 @@
 					}
 				}
 			}
+			//判断是否完成拼图
 			function success(){
 				if(!document.getElementById("box_4_0").style.background){
 					for(var i=0; i < 4; i++){
@@ -112,27 +119,34 @@
 							}
 						}
 					}
-					setTimeout(function(){alert("祝DT14班全体同学2017年工资涨涨涨！")},0);
+					setTimeout(function(){
+						alert("祝DT14班全体同学2017年工资涨涨涨！");
+					},0);
 					//alert("成功");
 				}				
 			}
+			//手指放到屏幕上时,触摸点相对浏览器窗口的位置
 			var startX=0;
 			var startY=0;
+			//手指离开屏幕时,触摸点相对浏览器窗口的位置
 			var endX=0;
 			var endY=0;
-			function startabc(ev){
+			//手指放到屏幕上时触发
+			function startT(ev){
 				startX=ev.touches[0].clientX;
 				startY=ev.touches[0].clientY;
 				divStart.innerHTML='Touch start('+ev.touches[0].clientX+', '+ev.touches[0].clientY+')';
 				ev.preventDefault();  //阻止出现滚动条 
 			}
-			function endabc(ev){
+			//手指离开屏幕时触发
+			function endT(ev){
 				//alert("touchend");
 				endX=ev.changedTouches[0].clientX;
 				endY=ev.changedTouches[0].clientY;						
 				divEnd.innerHTML='Touch end('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
 				doAction();
 			}
+			//判断方向，移动块
 			function doAction(){
 				if(startX > endX && (startX-endX) > Math.abs(startY-endY)){
 					left();
@@ -148,20 +162,22 @@
 				}
 				success();	
 			}
-			document.addEventListener('touchstart',startabc,false); 
-			document.addEventListener('touchend',endabc,false); 
+			//绑定监听事件
+			document.addEventListener('touchstart',startT,false); 
+			document.addEventListener('touchend',endT,false); 
 			//document.addEventListener('touchmove',touches,false); 
+			
 			function startGame(){
 				for(var i=0;i<20;i++){
-					var box1 = "box_"+makeRandom()+"_"+makeRandom();
-					var box2 = "box_"+makeRandom()+"_"+makeRandom();
+					var box1 = "box_"+makeRandom(4)+"_"+makeRandom(4);
+					var box2 = "box_"+makeRandom(4)+"_"+makeRandom(4);
 					var box = document.getElementById("box1").style.background;
 					document.getElementById("box1").style.background=document.getElementById("box2").style.background;
 					document.getElementById("box2").style.background=box;
 				}			
 			}
-			function makeRandom(){
-				return document.write(parseInt(4*Math.random()));
+			function makeRandom(n){
+				return document.write(parseInt(n*Math.random()));
 			}
 		</script>
 	</head>
