--- a/7.html
+++ b/7.html
@@ -12,7 +12,7 @@
 			//页面元素，图片加载
 			function init(){
 				//alert("1");
-				var picture="zww"+(makeRandom(2)+1)+".jpg";				
+				//var picture="zww"+(makeRandom(2)+1)+".jpg";				
 				var html=[];
 				html.push("<table>");
 				for(var i=0; i < 4; i++){
