--- a/7.html
+++ b/7.html
@@ -21,7 +21,7 @@
 						var top="-"+240*j+"px";
 						//alert(top);
 						var left="-"+240*i+"px";
-						html.push('<td id="box_' + i + "_" + j + '" style="background: url(zww1.jgp) '+top+' '+left+';"></td>');
+						html.push('<td id="box_' + i + "_" + j + '" style="background: url(zww1.jpg) '+top+' '+left+';"></td>');
 					}
 					html.push("</tr>");
 				}
