--- a/7.html
+++ b/7.html
@@ -33,7 +33,7 @@
 				document.getElementById("box_3_0").style.background="";
 			}
 			//键盘事件操作
-			function move(){
+			function move(event){
 				switch(event.keyCode){
 					case 37:
 						left();
