--- a/7.html
+++ b/7.html
@@ -166,7 +166,7 @@
 			document.addEventListener('touchstart',startT,false); 
 			document.addEventListener('touchend',endT,false); 
 			//document.addEventListener('touchmove',touches,false); 
-			//document.addEventListener('onkeydown',move,false);
+			document.addEventListener('keydown',move,false);
 			
 			function startGame(){
 				for(var i=0;i<20;i++){
