--- a/7.html
+++ b/7.html
@@ -29,8 +29,9 @@
 				html.push('<div id="box_4_0"></div>');
 				var pannel=document.getElementById("pannel");
 				pannel.innerHTML=html.join("");
-				document.getElementById("box_4_0").style.background=document.getElementById("box_3_0").style.background;
-				document.getElementById("box_3_0").style.background="";
+				//document.getElementById("box_4_0").style.background=document.getElementById("box_3_0").style.background;
+				//document.getElementById("box_3_0").style.background="";
+				startGame();
 			}
 			//键盘事件操作
 			function move(){
