--- a/7.html
+++ b/7.html
@@ -170,9 +170,11 @@
 			document.addEventListener('keydown',move,false);
 			
 			function startGame(){
-				for(var i=0;i<20;i++){
+				for(var i=0;i<2;i++){
 					var box1 = "box_"+makeRandom(4)+"_"+makeRandom(4);
+					alert(box1);
 					var box2 = "box_"+makeRandom(4)+"_"+makeRandom(4);
+					alert(box2);
 					var box = document.getElementById("box1").style.background;
 					document.getElementById("box1").style.background=document.getElementById("box2").style.background;
 					document.getElementById("box2").style.background=box;
