--- a/7.html
+++ b/7.html
@@ -170,6 +170,7 @@
 			document.addEventListener('keydown',move,false);
 			
 			function startGame(){
+				alert("a");
 				for(var i=0;i<2;i++){
 					var box1 = "box_"+makeRandom(4)+"_"+makeRandom(4);
 					alert(box1);
