--- a/7.html
+++ b/7.html
@@ -173,13 +173,14 @@
 				alert("a");
 				for(var i=0;i<2;i++){
 					var box1 = "box_"+makeRandom(4)+"_"+makeRandom(4);
-					alert(box1);
+					//alert(box1);
 					var box2 = "box_"+makeRandom(4)+"_"+makeRandom(4);
-					alert(box2);
-					var box = document.getElementById(box1).style.background;
+					//alert(box2);
+					document.getElementById("box_4_0").style.background=document.getElementById(box1).style.background;
 					document.getElementById(box1).style.background=document.getElementById(box2).style.background;
-					document.getElementById(box2).style.background=box;
-				}			
+					document.getElementById(box2).style.background=document.getElementById("box_4_0").style.background=;
+				}	
+				document.getElementById("box_4_0").style.background="";
 			}
 			function makeRandom(n){
 				return parseInt(n*Math.random());
