--- a/7.html
+++ b/7.html
@@ -178,7 +178,7 @@
 					//alert(box2);
 					document.getElementById("box_4_0").style.background=document.getElementById(box1).style.background;
 					document.getElementById(box1).style.background=document.getElementById(box2).style.background;
-					document.getElementById(box2).style.background=document.getElementById("box_4_0").style.background=;
+					document.getElementById(box2).style.background=document.getElementById("box_4_0").style.background;
 				}	
 				document.getElementById("box_4_0").style.background="";
 			}
