--- a/DT14.html
+++ b/DT14.html
@@ -33,7 +33,7 @@
 				//document.getElementById("box_3_0").style.background="";
 				startGame();
 		
-				this.bgAudio = new Audio(1.ogg);
+				this.bgAudio = new Audio('1.ogg');
 				this.bgAudio.loop = 'loop';
 				this.bgAudio.play();
 			}
@@ -188,7 +188,7 @@
 						up();
 						break;
 					case 2:
-						rigth();
+						right();
 						break;
 					case 3:
 						down();
