--- a/DT14.html
+++ b/DT14.html
@@ -212,7 +212,7 @@
 			}
 		</script>
 	</head>
-	<body onload="init()" onkeydown="move()">
+	<body onload="init()">
 		<div id="pannel"></div>
 		<div id="divStart"></div> 
 		<div id="divMove"></div>
