--- a/DT14.html
+++ b/DT14.html
@@ -51,15 +51,19 @@
 				switch(event.keyCode){
 					case 37:
 						left();
+						moveAudio();
 						break;
 					case 38:
 						up();
+						moveAudio();
 						break;
 					case 39:
 						right();
+						moveAudio();
 						break;
 					case 40:
 						down();
+						moveAudio();
 						break;
 					default:
 						break;
