--- a/ggl.html
+++ b/ggl.html
@@ -2,7 +2,17 @@
 <html>
 	<head>
 		<meta charset="gbk">
-		<title>个性化拼图</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui"/>
+		<meta name="apple-mobile-web-app-status-bar-style" content="default"/>
+		<meta name="apple-mobile-web-app-title" content=""/>
+		<meta name="apple-touch-fullscreen" content="YES"/>
+		<meta name="apple-mobile-web-app-capable" content="yes"/>
+		<meta name="format-detection" content="telephone=no"/>
+		<meta name="HandheldFriendly" content="true"/>
+		<meta http-equiv="x-rim-auto-match" content="none"/>
+		<meta name="format-detection" content="telephone=no"/>
+		<meta name="wap-font-scale" content="no">
+		<title>刮刮乐</title>
 		<style type="text/css">
 			#pannelBack{width:960px; height:1280px; }
 		</style>		
