--- a/ggl.html
+++ b/ggl.html
@@ -57,7 +57,7 @@
 				x=ev.changedTouches[0].clientX;
 				y=ev.changedTouches[0].clientY;	
 				clearOn(x,y);				
-				divMove.innerHTML='Touch end('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
+				divMove.innerHTML='Touch move('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
 			}
 			//手指离开屏幕时触发
 			function endT(ev){
