--- a/ggl.html
+++ b/ggl.html
@@ -38,7 +38,7 @@
 				var ctx=c.getContext("2d");
 				ctx.fillStyle="#999";
 				//ctx.fillRect(x-20,y-20,x+20,y+20);
-				ctx.clearRect(x-1,y-1,x+1,y+1);				
+				ctx.clearRect(x-10,y-10,20,20);				
 			}
 			//手指放到屏幕上时,触摸点相对浏览器窗口的位置
 			var x=0;
