--- a/ggl.html
+++ b/ggl.html
@@ -9,7 +9,7 @@
 	</head>
 	<body onload="init()">
 		<div style="position:relative;">
-			<img id="pannelBack" src="" style="opacity:1;" width="960px" height="1280px">
+			<img id="pannelBack" src="" style="opacity:1;" width="960px" height="auto">
 			<canvas id="myCanvas" width="960px" height="1280px" style="position:absolute;left:0px;"></canvas>
 			<div id="divStart"></div> 
 			<div id="divMove"></div>
