--- a/ggl.html
+++ b/ggl.html
@@ -4,13 +4,13 @@
 		<meta charset="gbk">
 		<title>刮刮乐</title>
 		<style type="text/css">
-			#pannelBack, #myCanvas{width:900px; height:1280px; }
+			#pannelBack{width:900px; height:1280px; }
 		</style>		
 	</head>
 	<body onload="init()">
 		<div style="position:relative;">
-			<img id="pannelBack" src="" style="opacity:1;">
-			<canvas id="myCanvas" style="position:absolute;left:0px;"></canvas>
+			<img id="pannelBack" src="" style="opacity:1;" >
+			<canvas id="myCanvas" width="900px" height="1280px" style="position:absolute;left:0px;"></canvas>
 			<div id="divStart"></div> 
 			<div id="divMove"></div>
 			<div id="divEnd"></div>
