--- a/ggl.html
+++ b/ggl.html
@@ -33,6 +33,23 @@
 				ctx.clearRect( x , y , Math.sin( angle * ( Math.PI / 180 )) * r , Math.cos( angle * ( Math.PI / 180 )) * r );
 				}
 			}
+			var pers=960*1280*2/3;
+			function clearAll(){
+				var imgData=ctx.getImageData(0,0,960,1280);
+				var num=0;				
+				for (var i=0;i<imgData.data.length;i+=4){
+				  //imgData.data[i+0]=255;
+				  //imgData.data[i+1]=0;
+				  //imgData.data[i+2]=0;
+					if(imgData.data[i+3]==0){
+						num++;
+						if(num>pers){
+							alert("完成");
+							return;
+						}
+					}
+				}
+			}
 			//背景音乐
 			function backgroundAudio(){
 				var bgAudio = new Audio('1.ogg');
@@ -63,7 +80,7 @@
 				//alert("touchend");
 				x=ev.changedTouches[0].clientX;
 				y=ev.changedTouches[0].clientY;	
-				clearCircle(x,y,30);			
+				clearAll();			
 				divEnd.innerHTML='Touch end('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
 			}			
 			//绑定监听事件
