--- a/ggl.html
+++ b/ggl.html
@@ -38,13 +38,11 @@
 				var imgData=ctx.getImageData(0,0,960,1280);
 				var num=0;				
 				for (var i=0;i<imgData.data.length;i+=4){
-				  //imgData.data[i+0]=255;
-				  //imgData.data[i+1]=0;
-				  //imgData.data[i+2]=0;
 					if(imgData.data[i+3]==0){
 						num++;
 						if(num>pers){
 							alert("完成");
+							ctx.clearRect(0,0,960,1280);
 							return;
 						}
 					}
