--- a/ggl.html
+++ b/ggl.html
@@ -25,7 +25,6 @@
 				ctx.fillRect(0,0,960,1280);
 				var picture="ggl"+(makeRandom(1)+1)+".jpg";
 				document.getElementById("pannelBack").src=picture;
-				//backgroundAudio();
 			}
 			function clearCircle( x , y , r ){				
 				for( var i = 0 ; i < Math.round( Math.PI * r ) ; i++ ){
@@ -33,7 +32,7 @@
 				ctx.clearRect( x , y , Math.sin( angle * ( Math.PI / 180 )) * r , Math.cos( angle * ( Math.PI / 180 )) * r );
 				}
 			}
-			var pers=960*1280*2/3;
+			var pers=960*1280*3/5;
 			function clearAll(){
 				var imgData=ctx.getImageData(0,0,960,1280);
 				var num=0;				
@@ -47,13 +46,7 @@
 						}
 					}
 				}
-			}
-			//背景音乐
-			function backgroundAudio(){
-				var bgAudio = new Audio('1.ogg');
-				bgAudio.loop = 'loop';
-				bgAudio.play();
-			}			
+			}		
 			//手指放到屏幕上时,触摸点相对浏览器窗口的位置
 			var x=0;
 			var y=0;
@@ -61,8 +54,8 @@
 			function startT(ev){
 				x=ev.touches[0].clientX;
 				y=ev.touches[0].clientY;
-				divStart.innerHTML='Touch start('+ev.touches[0].clientX+', '+ev.touches[0].clientY+')';
-				clearCircle(x,y,30);
+				//divStart.innerHTML='Touch start('+ev.touches[0].clientX+', '+ev.touches[0].clientY+')';
+				clearCircle(x,y,40);
 				ev.preventDefault();  //阻止出现滚动条 
 			}
 			//手指在屏幕上移动时触发
@@ -70,8 +63,8 @@
 				//alert("touchend");
 				x=ev.changedTouches[0].clientX;
 				y=ev.changedTouches[0].clientY;	
-				clearCircle(x,y,30);				
-				divMove.innerHTML='Touch move('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
+				clearCircle(x,y,40);				
+				//divMove.innerHTML='Touch move('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
 			}
 			//手指离开屏幕时触发
 			function endT(ev){
@@ -79,7 +72,7 @@
 				x=ev.changedTouches[0].clientX;
 				y=ev.changedTouches[0].clientY;	
 				clearAll();			
-				divEnd.innerHTML='Touch end('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
+				//divEnd.innerHTML='Touch end('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
 			}			
 			//绑定监听事件
 			document.addEventListener('touchstart',startT,false); 
