--- a/DT14.html
+++ b/DT14.html
@@ -2,225 +2,84 @@
 <html>
 	<head>
 		<meta charset="gbk">
-		<title>个性化拼图</title>
+		<title>刮刮乐</title>
 		<style type="text/css">
-			table{border-collapse:collapse;}
-			td, #box_3_0{border:1px solid #888; width:320px; height:320px;}
-			td{width:320px; height:320px;}
-		</style>
-		<script type="text/javascript">
+			#pannelBack{width:960px; height:1280px; }
+		</style>		
+	</head>
+	<body onload="init()">
+		<div style="position:relative;">
+			<img id="pannelBack" src="" style="opacity:1;" >
+			<canvas id="myCanvas" width="960px" height="1280px" style="position:absolute;left:0px;top:0px;"></canvas>
+			<div id="divStart"></div> 
+			<div id="divMove"></div>
+			<div id="divEnd"></div>
+		</div>	
+	</body>
+	<script type="text/javascript">
 			//页面元素，图片加载
+			var c=document.getElementById("myCanvas");
+			var ctx=c.getContext("2d");
 			function init(){
-				//alert("1");
-				var picture="zww"+(makeRandom(2)+1)+".jpg";				
-				var html=[];
-				html.push("<table>");
-				for(var i=0; i < 3; i++){
-					html.push("<tr>");
-					for(var j=0; j < 3; j++){
-						var top="-"+320*j+"px";
-						//alert(top);
-						var left="-"+320*i+"px";
-						html.push('<td id="box_' + i + "_" + j + '" style="background: url('+picture+') '+top+' '+left+';"></td>');
-					}
-					html.push("</tr>");
+				ctx.fillStyle="#999";
+				ctx.fillRect(0,0,960,1280);
+				var picture="ggl_"+(makeRandom(6)+1)+".jpg";
+				document.getElementById("pannelBack").src=picture;
+			}
+			function clearCircle( x , y , r ){				
+				for( var i = 0 ; i < Math.round( Math.PI * r ) ; i++ ){
+				var angle = ( i / Math.round( Math.PI * r )) * 360;
+				ctx.clearRect( x , y , Math.sin( angle * ( Math.PI / 180 )) * r , Math.cos( angle * ( Math.PI / 180 )) * r );
 				}
-				html.push("</table>");
-				html.push('<div id="box_3_0"></div>');
-				var pannel=document.getElementById("pannel");
-				pannel.innerHTML=html.join("");
-				//document.getElementById("box_4_0").style.background=document.getElementById("box_3_0").style.background;
-				//document.getElementById("box_3_0").style.background="";
-				startGame();
-		
-				backgroundAudio();
 			}
-			//背景音乐
-			function backgroundAudio(){
-				var bgAudio = new Audio('1.ogg');
-				bgAudio.loop = 'loop';
-				bgAudio.play();
-			}
-			//移动时的音乐
-			function moveAudio(){
-				var mAudio = new Audio('move.ogg');
-				mAudio.play();
-			}
-			//键盘事件操作
-			function move(){
-				switch(event.keyCode){
-					case 37:
-						left();
-						moveAudio();
-						break;
-					case 38:
-						up();
-						moveAudio();
-						break;
-					case 39:
-						right();
-						moveAudio();
-						break;
-					case 40:
-						down();
-						moveAudio();
-						break;
-					default:
-						break;
-				}
-				success();
-			}
-			//左移
-			function left(){
-				for(var i=0; i < 3; i++){
-					for(var j=0; j < 2; j++){
-						var inner = document.getElementById("box_"+i+"_"+j).style.background;
-						if(!inner){
-							document.getElementById("box_"+i+"_"+j).style.background=document.getElementById("box_"+i+"_"+(j+1)).style.background;
-							document.getElementById("box_"+i+"_"+(j+1)).style.background="";
+			var pers=960*1280*3/5;
+			function clearAll(){
+				var imgData=ctx.getImageData(0,0,960,1280);
+				var num=0;				
+				for (var i=0;i<imgData.data.length;i+=4){
+					if(imgData.data[i+3]==0){
+						num++;
+						if(num>pers){
+							//alert("完成");
+							ctx.clearRect(0,0,960,1280);
 							return;
 						}
 					}
 				}
-			}
-			//上移
-			function up(){
-				for(var i=0; i < 3; i++){
-					for(var j=0; (j < 3 && i < 3) || (i==2 && j==0); j++){
-						var inner = document.getElementById("box_"+i+"_"+j).style.background;
-						if(!inner){
-							document.getElementById("box_"+i+"_"+j).style.background=document.getElementById("box_"+(i+1)+"_"+j).style.background;
-							document.getElementById("box_"+(i+1)+"_"+j).style.background="";
-							return;
-						}
-					}
-				}
-			}
-			//右移
-			function right(){
-				for(var i=0; i < 3; i++){
-					for(var j=1; j < 3; j++){
-						var inner = document.getElementById("box_"+i+"_"+j).style.background;
-						if(!inner){
-							document.getElementById("box_"+i+"_"+j).style.background=document.getElementById("box_"+i+"_"+(j-1)).style.background;
-							document.getElementById("box_"+i+"_"+(j-1)).style.background="";
-							return;
-						}
-					}
-				}
-			}
-			//下移
-			function down(){			
-				for(var i=0; i < 4; i++){
-					for(var j=0; (j < 3 && i < 3) || (i==3 && j==0); j++){
-						var inner = document.getElementById("box_"+i+"_"+j).style.background;
-						if(!inner && i-1>=0){
-							document.getElementById("box_"+i+"_"+j).style.background=document.getElementById("box_"+(i-1)+"_"+j).style.background;
-							document.getElementById("box_"+(i-1)+"_"+j).style.background="";
-							return;
-						}
-					}
-				}
-			}
-			//判断是否完成拼图
-			function success(){
-				if(!document.getElementById("box_3_0").style.background){
-					for(var i=0; i < 3; i++){
-						for(var j=0; j < 3; j++){
-							var x = document.getElementById("box_"+i+"_"+j).style.backgroundPositionX;
-							var y = document.getElementById("box_"+i+"_"+j).style.backgroundPositionY;
-							console.log(x);
-							if(x==(j*(-320)+"px") && y==(i*(-320)+"px")){
-								continue;
-							}else{
-								return;
-							}
-						}
-					}
-					setTimeout(function(){
-						alert("祝DT14班全体同学2017年工资涨涨涨！");
-					},0);
-					//alert("成功");
-				}				
-			}
+			}		
 			//手指放到屏幕上时,触摸点相对浏览器窗口的位置
-			var startX=0;
-			var startY=0;
-			//手指离开屏幕时,触摸点相对浏览器窗口的位置
-			var endX=0;
-			var endY=0;
+			var x=0;
+			var y=0;
 			//手指放到屏幕上时触发
 			function startT(ev){
-				startX=ev.touches[0].clientX;
-				startY=ev.touches[0].clientY;
-				divStart.innerHTML='Touch start('+ev.touches[0].clientX+', '+ev.touches[0].clientY+')';
+				x=ev.touches[0].clientX;
+				y=ev.touches[0].clientY;
+				//divStart.innerHTML='Touch start('+ev.touches[0].clientX+', '+ev.touches[0].clientY+')';
+				clearCircle(x,y,40);
 				ev.preventDefault();  //阻止出现滚动条 
+			}
+			//手指在屏幕上移动时触发
+			function moveT(ev){
+				//alert("touchend");
+				x=ev.changedTouches[0].clientX;
+				y=ev.changedTouches[0].clientY;	
+				clearCircle(x,y,40);				
+				//divMove.innerHTML='Touch move('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
 			}
 			//手指离开屏幕时触发
 			function endT(ev){
 				//alert("touchend");
-				endX=ev.changedTouches[0].clientX;
-				endY=ev.changedTouches[0].clientY;						
-				divEnd.innerHTML='Touch end('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
-				doAction();
-			}
-			//判断方向，移动块
-			function doAction(){
-				if(startX > endX && (startX-endX) > Math.abs(startY-endY)){
-					left();
-				}
-				if(startY > endY && (startY-endY) > Math.abs(startX-endX)){
-					up();
-				}
-				if(startX < endX && (endX-startX) > Math.abs(startY-endY)){
-					right();
-				}
-				if(startY < endY && (endY-startY) > Math.abs(startX-endX)){
-					down();
-				}
-				moveAudio();
-				success();	
-			}
+				x=ev.changedTouches[0].clientX;
+				y=ev.changedTouches[0].clientY;	
+				clearAll();			
+				//divEnd.innerHTML='Touch end('+ev.changedTouches[0].clientX+', '+ev.changedTouches[0].clientY+')'; 
+			}			
 			//绑定监听事件
 			document.addEventListener('touchstart',startT,false); 
 			document.addEventListener('touchend',endT,false); 
-			//document.addEventListener('touchmove',touches,false); 
-			document.addEventListener('keydown',move,false);
-			
-			function startGame(){
-				down();
-				left();
-				down();
-				for(var i=0;i<20;i++){
-					var mov=makeRandom(4);
-					switch(mov){
-						case 0:
-							left();
-							break;
-						case 1:
-							up();
-							break;
-						case 2:
-							right();
-							break;
-						case 3:
-							down();
-							break;
-						default:
-							break;
-					}
-				}	
-			}
+			document.addEventListener('touchmove',moveT,false); 
 			function makeRandom(n){
 				return parseInt(n*Math.random());
 			}
 		</script>
-	</head>
-	<body onload="init()">
-		<div id="pannel"></div>
-		<div id="divStart"></div> 
-		<div id="divMove"></div>
-		<div id="divEnd"></div>
-		<!--<input type="button" value="开始" onclick="startGame()">-->
-	</body>
 </html>
