--- a/DT14.html
+++ b/DT14.html
@@ -23,6 +23,10 @@
 			function init(){
 				ctx.fillStyle="#999";
 				ctx.fillRect(0,0,960,1280);
+				ctx.font="200px Arial";
+				for(var i=0;i<6;i++){
+					ctx.strokeText("刮啥得啥",80,200*(i+1));
+				}				
 				var picture="ggl_"+(makeRandom(6)+1)+".jpg";
 				document.getElementById("pannelBack").src=picture;
 			}
@@ -32,7 +36,7 @@
 				ctx.clearRect( x , y , Math.sin( angle * ( Math.PI / 180 )) * r , Math.cos( angle * ( Math.PI / 180 )) * r );
 				}
 			}
-			var pers=960*1280*3/5;
+			var pers=960*1280*1/2;
 			function clearAll(){
 				var imgData=ctx.getImageData(0,0,960,1280);
 				var num=0;				
