--- a/DT14.html
+++ b/DT14.html
@@ -23,8 +23,9 @@
 			function init(){
 				ctx.fillStyle="#999";
 				ctx.fillRect(0,0,960,1280);
-				ctx.font="200px Arial";
+				ctx.font="200px 楷体";
 				for(var i=0;i<6;i++){
+					//ctx.fillText("刮啥得啥",80,200*(i+1));
 					ctx.strokeText("刮啥得啥",80,200*(i+1));
 				}				
 				var picture="ggl_"+(makeRandom(6)+1)+".jpg";
