--- a/DT14.html
+++ b/DT14.html
@@ -23,7 +23,7 @@
 			function init(){
 				ctx.fillStyle="#999";
 				ctx.fillRect(0,0,960,1280);
-				ctx.font="200px fixedsys";
+				ctx.font="200px gulim";
 				for(var i=0;i<6;i++){
 					//ctx.fillText("刮啥得啥",80,200*(i+1));
 					ctx.strokeText("刮啥得啥",80,200*(i+1));
